[gd_scene load_steps=30 format=2]

[ext_resource path="res://testing/samuel/assets/loseit.png" type="Texture" id=1]
[ext_resource path="res://scenes/title/mainMenu.gd" type="Script" id=2]
[ext_resource path="res://Retro Gaming.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/HUD/art/wetfloor.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 31
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.517647, 0.4, 0.784314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0901961, 0, 0.368627, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.25098, 0.12549, 0.580392, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.411765, 0.356863, 0.588235, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.290196, 0.117647, 0.576471, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.623529, 0.388235, 0.741176, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.321569, 0.0627451, 0.345098, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.462745, 0.12549, 0.494118, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=13]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.65098, 0.34902, 0.709804, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.388235, 0.0901961, 0.396078, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.47451, 0.152941, 0.572549, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=17]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.654902, 0.360784, 0.713726, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.407843, 0.0745098, 0.431373, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.458824, 0.129412, 0.572549, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Animation" id=21]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("dissolve_rect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wetfloorLogo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "dissolve"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("dissolve_rect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "dissolve and resolve"

[sub_resource type="Animation" id=24]
resource_name = "logo"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("wetfloorLogo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.6, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "white-fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="titleBackground" type="Sprite" parent="."]

[node name="title" type="Sprite" parent="."]
position = Vector2( 619, 127 )
texture = ExtResource( 1 )

[node name="levelSelect" type="Button" parent="."]
margin_left = 485.0
margin_top = 337.0
margin_right = 768.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Play"

[node name="levelSelectionPanel" type="Panel" parent="."]
visible = false
margin_right = 1281.0
margin_bottom = 725.0
custom_styles/panel = SubResource( 5 )

[node name="levelSelect1" type="Button" parent="levelSelectionPanel"]
margin_left = 477.0
margin_top = 60.0
margin_right = 779.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Level 1"

[node name="levelSelect2" type="Button" parent="levelSelectionPanel"]
margin_left = 479.0
margin_top = 245.0
margin_right = 780.0
margin_bottom = 323.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Level 2"

[node name="levelSelect3" type="Button" parent="levelSelectionPanel"]
margin_left = 479.0
margin_top = 417.0
margin_right = 779.0
margin_bottom = 494.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Level 3"

[node name="levelSelect4" type="Button" parent="levelSelectionPanel"]
margin_left = 480.0
margin_top = 593.0
margin_right = 778.0
margin_bottom = 668.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Level 4"

[node name="backButton" type="Button" parent="levelSelectionPanel"]
margin_left = 51.0
margin_top = 34.0
margin_right = 254.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Back"

[node name="optionSelect" type="Button" parent="."]
margin_left = 486.0
margin_top = 517.0
margin_right = 769.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Options"

[node name="pauseMenuVisual" type="Panel" parent="."]
visible = false
margin_left = 388.0
margin_top = 75.0
margin_right = 851.0
margin_bottom = 585.0
custom_styles/panel = SubResource( 6 )

[node name="SEVolumeSlider" type="HSlider" parent="pauseMenuVisual"]
margin_left = 48.0
margin_top = 271.0
margin_right = 416.0
margin_bottom = 320.0
min_value = -60.0
max_value = 0.0

[node name="MusicVolumeSlider" type="HSlider" parent="pauseMenuVisual"]
margin_left = 49.0
margin_top = 144.0
margin_right = 417.0
margin_bottom = 193.0
min_value = -60.0
max_value = 0.0

[node name="MusicVolume" type="Label" parent="pauseMenuVisual"]
margin_left = 188.0
margin_top = 100.0
margin_right = 272.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 7 )
text = "Music"

[node name="SEVolume" type="Label" parent="pauseMenuVisual"]
margin_left = 127.0
margin_top = 232.0
margin_right = 349.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 8 )
text = "Sound Effects"

[node name="BackButtonVolume" type="Button" parent="pauseMenuVisual"]
margin_left = 84.0
margin_top = 417.0
margin_right = 388.0
margin_bottom = 473.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Back"

[node name="BackButtonMain" type="Button" parent="pauseMenuVisual"]
margin_left = 83.0
margin_top = 417.0
margin_right = 389.0
margin_bottom = 473.0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "Resume"

[node name="VolumeButton" type="Button" parent="pauseMenuVisual"]
margin_left = 70.0
margin_top = 66.0
margin_right = 394.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
text = "Volume"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 21 )
anims/dissolve = SubResource( 22 )
"anims/dissolve and resolve" = SubResource( 23 )
anims/logo = SubResource( 24 )
anims/white-fade = SubResource( 25 )

[node name="dissolve_rect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="wetfloorLogo" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1014, 319 )
scale = Vector2( 0.89726, 0.82835 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.25

[connection signal="pressed" from="levelSelect" to="." method="_on_levelSelect_pressed"]
[connection signal="pressed" from="levelSelectionPanel/levelSelect1" to="." method="_on_levelSelect1_pressed"]
[connection signal="pressed" from="levelSelectionPanel/levelSelect2" to="." method="_on_levelSelect2_pressed"]
[connection signal="pressed" from="levelSelectionPanel/levelSelect3" to="." method="_on_levelSelect3_pressed"]
[connection signal="pressed" from="levelSelectionPanel/levelSelect4" to="." method="_on_levelSelect4_pressed"]
[connection signal="pressed" from="levelSelectionPanel/backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="optionSelect" to="." method="_on_optionSelect_pressed"]
[connection signal="value_changed" from="pauseMenuVisual/SEVolumeSlider" to="." method="_on_SEVolumeSlider_value_changed"]
[connection signal="value_changed" from="pauseMenuVisual/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="pressed" from="pauseMenuVisual/BackButtonVolume" to="." method="_on_BackButtonVolume_pressed"]
[connection signal="pressed" from="pauseMenuVisual/BackButtonMain" to="." method="_on_BackButtonMain_pressed"]
[connection signal="pressed" from="pauseMenuVisual/VolumeButton" to="." method="_on_VolumeButton_pressed"]
